OrientationBot should behave better no matter where it starts